<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>geoserver_client</name>
  <version>0.1.0</version>
  <description>ROS 2 node for interacting with GeoServer via WCS to fetch and query GeoTIFF maps</description>
  <author email="m.schratter@gmx.at">Markus Schratter</author>
  <maintainer email="m.schratter@gmx.at">markusschratter</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geoserver_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>launch_ros</depend>

  <depend>libgdal-dev</depend>
  <depend>libcurl4-openssl-dev</depend>
  <depend>libopencv-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

