<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>geoserver_ros</name>
  <version>0.1.0</version>
  <description>Package for the integration of geoserver with ROS</description>
  <author email="m.schratter@gmx.at">MarkusSchratter</author>
  <maintainer email="m.schratter@gmx.at">markusschratter</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geoserver_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
